--- a/tasks/symfony/deploy.yml
+++ b/tasks/symfony/deploy.yml
@@ -12,12 +12,12 @@
 
 - name: Create project folder structure (6)
   file:
-    path: "{{ steamengine_sf_persistent_path }}/{{ item.key }}"
+    path: "{{ steamengine_persistent_base_path }}/{{ item.path }}"
     state: directory
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: 0770
-  with_dict: "{{ steamengine_sf_persistent_directory }}"
+  with_items: "{{ steamengine_persistent_directories }}"
 
 - name: Create configuration file
   template:
@@ -167,27 +167,6 @@
     dest: "{{ steamengine_sf_log_path }}"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-  when: new_build_to_deploy
-  tags:
-    - steamengine_deploy_sf
-
-- name: Clean link directory
-  file:
-    state: absent
-    path: "{{ steamengine_project_root_path_web }}/{{ item.value }}"
-  with_dict: "{{ steamengine_sf_persistent_directory }}"
-  when: new_build_to_deploy
-  tags:
-    - steamengine_deploy_drupal
-
-- name: Create link directory
-  file:
-    state: link
-    src: "{{ steamengine_sf_persistent_path }}/{{ item.key }}"
-    dest: "{{ steamengine_project_root_path_web }}/{{ item.value }}"
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-  with_dict: "{{ steamengine_sf_persistent_directory }}"
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_sf
