--- a/vars/symfony.yml
+++ b/vars/symfony.yml
@@ -35,7 +35,7 @@ steamengine_wrapper_scripts_base:
   - name: log
     description: Display and follow project logs
     command: |
-      tail -f {{ steamengine_logs_path }}/*.log
+      tail -f {{ steamengine_sf_external_logs_path }}/*.log
   - name: fixpermissions
     description: Restore project files and folders permissions
     command: |
@@ -44,19 +44,19 @@ steamengine_wrapper_scripts_base:
         -not -path '{{ steamengine_project_root_path_web }}/{{ value }}*' \
       {% endfor %}
       {% for value in steamengine_persistent_directories %}
-        -not -path '{{ steamengine_project_name }}/{{ value.symlink_src }}*' \
+        -not -path '/{{ steamengine_project_name }}/{{ value.symlink_src }}*' \
       {% endfor %}
         -not -path '{{ steamengine_project_root_path_web }}/.env.local' \
         -exec chmod 'u=rwx,g=rx,o=' {} \;
 
       find -L {{ steamengine_project_root_path_web }} \
         -not -path '{{ steamengine_project_root_path_web }}/.env.local' \
-        -exec chown {{ steamengine_project_user }}:{{ steamengine_project_user }}app {} \;
+        -exec chown {{ steamengine_project_user }}:{{ steamengine_app_user }} {} \;
 
       chmod -R 'u=rwx,g=rwx,o=' \
       {% for value in steamengine_sf_path_with_write_permission %}
         {{ steamengine_project_root_path_web }}/{{ value }} \
       {% endfor %}
       {% for value in steamengine_persistent_directories %}
-        {{ steamengine_project_name }}/{{ value.symlink_src }} \
+        /{{ steamengine_project_name }}/{{ value.symlink_src }} \
       {% endfor %}
