--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -54,6 +54,10 @@
         - steamengine_runtime
   tags: always
 
+- name: "Reset var new_build_to_deploy"
+  set_fact:
+    new_build_to_deploy: false
+
 - include_tasks:
     file: "{{ steamengine_project_type }}/deploy.yml"
     apply:
