--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -57,6 +57,7 @@
 - name: "Reset var new_build_to_deploy"
   set_fact:
     new_build_to_deploy: false
+  tags: always
 
 - include_tasks:
     file: "{{ steamengine_project_type }}/deploy.yml"
