--- a/vars/drupal.yml
+++ b/vars/drupal.yml
@@ -54,3 +54,8 @@ steamengine_wrapper_scripts_base:
       {% for value in steamengine_persistent_directories %}
         /{{ steamengine_project_name }}/{{ value.symlink_src }} \
       {% endfor %}
+  - name: drush_deploy
+    description: "Deploy site with Drush command"
+    command: "{{ steamengine_drush_launcher_path }} deploy -y"
+    run_as_app_user: true
+    run_in_project_root_path_web: true
