[FIX] variable steamengine_drupal_public_directory forgotten in some places

--- a/tasks/drupal/deploy.yml
+++ b/tasks/drupal/deploy.yml
@@ -47,7 +47,7 @@
 
 - name: Ensure settings is present
   copy:
-    src: "{{ tempdir.path }}/web/sites/default/default.settings.php"
+    src: "{{ tempdir.path }}/{{ steamengine_drupal_public_directory }}/sites/default/default.settings.php"
     dest: "{{ steamengine_conf_path }}/settings.php"
     force: no
     remote_src: true
@@ -109,7 +109,7 @@
 - name: Clean configuration file
   file:
     state: absent
-    path: "{{ steamengine_project_root_path_web }}/web/sites/default/settings.php"
+    path: "{{ steamengine_project_root_path_web }}/{{ steamengine_drupal_public_directory }}/sites/default/settings.php"
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_drupal
@@ -118,7 +118,7 @@
   file:
     state: link
     src: "{{ steamengine_conf_path }}/settings.php"
-    dest: "{{ steamengine_project_root_path_web }}/web/sites/default/settings.php"
+    dest: "{{ steamengine_project_root_path_web }}/{{ steamengine_drupal_public_directory }}/sites/default/settings.php"
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_drupal
