--- a/tasks/drupal/deploy.yml
+++ b/tasks/drupal/deploy.yml
@@ -138,7 +138,7 @@
     - always
 
 - name: Check if database is empty
-  command: "{{ steamengine_drush_launcher_path }} -r {{ steamengine_project_root_path_web }} sql-query 'show tables'"
+  command: "{{ steamengine_drupal_drush_launcher_path }} -r {{ steamengine_project_root_path_web }} sql-query 'show tables'"
   register: database_table_number
   when: new_build_to_deploy
   tags:
@@ -146,7 +146,7 @@
 
 - name: "Is a new deploy: {{ database_table_number.changed and not database_table_number.stdout }}"
   set_fact:
-    new_deploy: "{{ database_table_number.changed and not database_table_number.stdout }}"
+    initial_drupal_install: "{{ database_table_number.changed and not database_table_number.stdout }}"
   tags:
     - steamengine_deploy_drupal
 
@@ -154,17 +154,25 @@
 
 - include_tasks:
     file: "./deploy_database.yml"
-  when: new_deploy and steamengine_db_dump_url is defined and steamengine_db_dump_url
+    apply:
+      tags:
+        - steamengine_deploy
+        - steamengine_deploy_drupal
+  when: initial_drupal_install and steamengine_db_dump_url is defined and steamengine_db_dump_url
   tags:
-    - steamengine_deploy
+    - steamengine_deploy_drupal
 
 # Install with Drush
 
 - include_tasks:
     file: "./install_from_drush.yml"
-  when: new_deploy and steamengine_drupal_install_from_drush
+    apply:
+      tags:
+        - steamengine_deploy
+        - steamengine_deploy_drupal
+  when: initial_drupal_install and steamengine_drupal_install_from_drush
   tags:
-    - steamengine_deploy
+    - steamengine_deploy_drupal
 
 # Finish install
 
@@ -179,7 +187,7 @@
     - steamengine_deploy_drupal
 
 - name: Drush command post deploy
-  command: "{{ steamengine_drush_launcher_path }} -r {{ steamengine_project_root_path_web }} {{ item }}"
+  command: "{{ steamengine_drupal_drush_launcher_path }} -r {{ steamengine_project_root_path_web }} {{ item }}"
   with_items: "{{ steamengine_drupal_drush_command_deployment }}"
   when: new_build_to_deploy
   tags:
