--- a/tasks/common/structure.yml
+++ b/tasks/common/structure.yml
@@ -25,7 +25,7 @@
   file:
     path: "{{ item }}"
     state: directory
-    owner: "{{ steamengine_project_user }}"
+    owner: "root"
     group: "{{ steamengine_project_user }}"
     mode: 0750
   with_items:
