--- a/tasks/drupal/deploy_database.yml
+++ b/tasks/drupal/deploy_database.yml
@@ -29,7 +29,7 @@
   shell: >
     {{ steamengine_drupal_drush_launcher_path }} -r {{ steamengine_project_root_path_web }} \
     sql:cli < {{ steamengine_project_root_path }}/{{ archive_contents.files[0] }}
-  when: initial_drupal_install and not steamengine_drupal_install_from_drush and steamengine_drupal_db_dump_url is defined and steamengine_drupal_db_dump_url
+  when: steamengine_drupal_initial_install and not steamengine_drupal_install_from_drush and steamengine_drupal_db_dump_url is defined and steamengine_drupal_db_dump_url
   tags:
     - steamengine_deploy_drupal
 
