--- a/molecule/drupal9-drush/requirements.yml
+++ b/molecule/drupal9-drush/requirements.yml
@@ -3,9 +3,8 @@
   version: e3f22bf58446039f24312583532280c7d9032e96
   name: anxs.postgresql
 
-- src: https://github.com/STEAMULO/ansible-role-php.git
-  version: 4.7.1
-  name: steamulo.php
+- src: geerlingguy.php
+  version: 4.8.0
 
 - src: geerlingguy.nginx
   version: 2.7.0
