--- a/vars/drupal.yml
+++ b/vars/drupal.yml
@@ -54,6 +54,12 @@ steamengine_wrapper_scripts_base:
         /{{ steamengine_project_name }}/{{ value.symlink_src }} \
       {% endfor %}
       || true
+  - name: drush_fix_permissions
+    description: Restore drush cache files permissions
+    command: |
+      find -L {{ steamengine_home_path }}/.drush \
+        -exec chown {{ steamengine_project_user }}:{{ steamengine_app_user }} {} \
+      || true
   - name: drush_deploy
     description: "Deploy site with Drush command"
     command: "{{ steamengine_drupal_drush_launcher_path }} deploy -y"
