--- a/vars/symfony.yml
+++ b/vars/symfony.yml
@@ -47,11 +47,11 @@ steamengine_wrapper_scripts_base:
         -not -path '/{{ steamengine_project_name }}/{{ value.symlink_src }}*' \
       {% endfor %}
         -not -path '{{ steamengine_project_root_path_web }}/.env.local' \
-        -exec chmod 'u=rwx,g=rx,o=' {} \;
+        -print0 | xargs -0 chmod 'u=rwx,g=rx,o='
 
       find -L {{ steamengine_project_root_path_web }} \
         -not -path '{{ steamengine_project_root_path_web }}/.env.local' \
-        -exec chown {{ steamengine_project_user }}:{{ steamengine_app_user }} {} \;
+        -print0 | xargs -0 chown {{ steamengine_project_user }}:{{ steamengine_app_user }}
 
       chmod -R 'u=rwx,g=rwx,o=' \
       {% for value in steamengine_sf_path_with_write_permission %}
