Replace centos 8 by rockylinux 8. Add ubuntu22. Upgrade ansible (support for os detection on rocky).

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,8 +16,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
-        distribution: [centos7, centos8, ubuntu1804, ubuntu2004]
+        python-version: [3.8]
+        distribution: [centos7, rockylinux8, ubuntu1804, ubuntu2004, ubuntu2204]
     steps:
       - uses: actions/checkout@v2
         with:
