--- a/tasks/common/install_deps.yml
+++ b/tasks/common/install_deps.yml
@@ -1,9 +1,9 @@
 ---
 
 - name: Install acl package
-  package:
+  ansible.builtin.package:
     name: acl
 
 - name: Install unzip package
-  package:
+  ansible.builtin.package:
     name: unzip
