--- a/molecule/symfony/converge.yml
+++ b/molecule/symfony/converge.yml
@@ -4,26 +4,26 @@
   become: true
   pre_tasks:
     - name: Add ppa:ondrej/php repository
-      apt_repository:
+      ansible.builtin.apt_repository:
         repo: ppa:ondrej/php
       when: ansible_os_family == 'Debian'
     - name: Import remi GPG key.
-      rpm_key:
+      ansible.builtin.rpm_key:
         key: "https://rpms.remirepo.net/RPM-GPG-KEY-remi2018"
         state: present
       when: ansible_os_family == 'RedHat'
     - name: Add remi-php74 repository
-      yum:
+      ansible.builtin.yum:
         name: https://rpms.remirepo.net/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm
         state: present
       when: ansible_os_family == 'RedHat'
-    - name: Enable module php7.4 for Centos8
-      dnf:
+    - name: Enable module php7.4 for REHL
+      ansible.builtin.dnf:
         name: '@php:remi-7.4'
         state: present
       when: ansible_os_family == 'RedHat' and ansible_distribution_major_version == '8'
     - name: "Create project app user test_symfonyapp"
-      user:
+      ansible.builtin.user:
         name: "test_symfonyapp"
         password: "*"
         createhome: false
@@ -41,7 +41,6 @@
         php_fpm_pool_group: test_symfonyapp
     - role: geerlingguy.nginx
       vars:
-        nginx_ppa_use: true
         nginx_remove_default_vhost: true
         nginx_worker_processes: "{{ ansible_processor_vcpus|default(ansible_processor_count) }}"
         nginx_vhosts:
