--- a/requirements.txt
+++ b/requirements.txt
@@ -1,83 +1,9 @@
-ansible==3.4.0
-ansible-base==2.10.9
-ansible-lint==5.2.1
-appdirs==1.4.3
-arrow==1.1.0
-attrs==20.3.0
-bcrypt==3.2.0
-binaryornot==0.4.4
-bracex==2.1.1
-CacheControl==0.12.6
-Cerberus==1.3.3
-certifi==2019.11.28
-cffi==1.14.5
-cfgv==3.2.0
-chardet==3.0.4
-click==7.1.2
-click-completion==0.5.2
-click-help-colors==0.9
-colorama==0.4.3
-commonmark==0.9.1
-contextlib2==0.6.0
-cookiecutter==1.7.2
-cryptography==3.4.7
-distlib==0.3.1
-distro==1.4.0
-docker==5.0.0
-enrich==1.2.6
-filelock==3.0.12
-flake8==3.9.1
-html5lib==1.0.1
-identify==2.2.4
-idna==2.8
-iniconfig==1.1.1
-ipaddr==2.2.0
-Jinja2==2.11.3
-jinja2-time==0.2.0
-lockfile==0.12.2
-MarkupSafe==1.1.1
-mccabe==0.6.1
-molecule==3.3.0
-molecule-docker==0.2.4
-msgpack==0.6.2
-nodeenv==1.6.0
-packaging==20.3
-paramiko==2.7.2
-pathspec==0.8.1
-pep517==0.8.2
-pluggy==0.13.1
-poyo==0.5.0
-pre-commit==2.12.1
-progress==1.5
-py==1.10.0
-pycodestyle==2.7.0
-pycparser==2.20
-pyflakes==2.3.1
-Pygments==2.8.1
-PyNaCl==1.4.0
-pyparsing==2.4.6
-pytest==6.2.3
-pytest-testinfra==6.3.0
-python-dateutil==2.8.1
-python-slugify==5.0.0
-pytoml==0.1.21
-PyYAML==5.4.1
-requests==2.25.1
-retrying==1.3.3
-rich==10.1.0
-ruamel.yaml==0.17.4
-ruamel.yaml.clib==0.2.2
-selinux==0.2.1
-shellingham==1.4.0
-six==1.14.0
-subprocess-tee==0.3.1
-tenacity==7.0.0
-text-unidecode==1.3
-toml==0.10.2
-typing-extensions==3.10.0.0
-urllib3==1.25.8
-virtualenv==20.4.4
-wcmatch==8.1.2
-webencodings==0.5.1
-websocket-client==0.58.0
-yamllint==1.26.1
+ansible==6.1.0
+ansible-compat==2.2.0
+ansible-core==2.13.2
+ansible-lint==6.4.0
+molecule==4.0.1
+molecule-docker==1.1.0
+yamllint==1.27.1
+flake8==5.0.2
+pytest-testinfra==6.8.0
