--- a/tasks/common/post_deploy.yml
+++ b/tasks/common/post_deploy.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Create storage subdirectories
-  file:
+  ansible.builtin.file:
     state: directory
     path: "{{ steamengine_persistent_base_path }}/{{ item.path }}"
     owner: "{{ steamengine_project_user }}"
@@ -11,7 +11,7 @@
   loop: "{{ steamengine_persistent_directories }}"
 
 - name: Delete directories if exists
-  file:
+  ansible.builtin.file:
     state: absent
     path: "/{{ steamengine_project_name }}/{{ item.symlink_src }}"
   when:
@@ -20,7 +20,7 @@
   loop: "{{ steamengine_persistent_directories }}"
 
 - name: Create symbolic link to storage directories
-  file:
+  ansible.builtin.file:
     state: link
     src: "{{ steamengine_persistent_base_path }}/{{ item.path }}"
     dest: "/{{ steamengine_project_name }}/{{ item.symlink_src }}"
@@ -33,6 +33,6 @@
   loop: "{{ steamengine_persistent_directories }}"
 
 - name: "Run post deploy commands"
-  command: "/{{ steamengine_project_name }}/bin/steamengine {{ item }}"
+  ansible.builtin.command: "/{{ steamengine_project_name }}/bin/steamengine {{ item }}"
   when: new_build_to_deploy is defined and new_build_to_deploy and steamengine_wrapper_scripts_post_deploy
   loop: "{{ steamengine_wrapper_scripts_post_deploy }}"
