--- a/tasks/common/structure.yml
+++ b/tasks/common/structure.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Create project folder structure (1)
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
     owner: "{{ steamengine_project_user }}"
@@ -11,7 +11,7 @@
     - "{{ steamengine_home_path }}"
 
 - name: Create project folder structure (2)
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
     owner: "{{ steamengine_project_user }}"
@@ -22,7 +22,7 @@
     - "{{ steamengine_conf_path }}"
 
 - name: Create project folder structure (3)
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
     owner: "root"
@@ -32,7 +32,7 @@
     - "{{ steamengine_bin_path }}"
 
 - name: Create project folder structure (4)
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     state: directory
     owner: "{{ steamengine_project_user }}"
