--- a/tasks/include/update_from_archive.yml
+++ b/tasks/include/update_from_archive.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Unarchive build
-  unarchive:
+  ansible.builtin.unarchive:
     src: "{{ archive_path }}"
     dest: "{{ dest_path }}"
     remote_src: true
@@ -9,18 +9,18 @@
   register: front_static_unzip_output
 
 - name: Registring all existing files
-  find:
+  ansible.builtin.find:
     paths: "{{ dest_path }}"
     recurse: true
   register: front_static_find_output
 
 - name: Registring new and old files
-  set_fact:
+  ansible.builtin.set_fact:
     front_static_old_files: "{{ front_static_find_output.files | map(attribute='path') | list | map('regex_replace', dest_path + '/', '' ) | list }}"
     front_static_new_files: "{{ front_static_unzip_output.files }}"
 
 - name: Remove old static files
-  file:
+  ansible.builtin.file:
     path: "{{ dest_path }}/{{ item }}"
     state: absent
   with_items: "{{ front_static_old_files | difference(front_static_new_files) }}"
