--- a/tasks/springboot/asserts.yml
+++ b/tasks/springboot/asserts.yml
@@ -1,14 +1,14 @@
 ---
 
 - name: Verify build extension
-  assert:
+  ansible.builtin.assert:
     that: (steamengine_build_url | basename | splitext)[1] == ".jar"
   when: steamengine_build_url is defined and steamengine_build_url
   tags:
     - steamengine_deploy_springboot
 
 - name: Verify conf sources
-  assert:
+  ansible.builtin.assert:
     that: steamengine_project_configuration_template_path is undefined or steamengine_project_configuration is undefined
   tags:
     - steamengine_deploy_springboot
