--- a/tasks/static/runtime.yml
+++ b/tasks/static/runtime.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: "Add nginx user in {{ steamengine_app_user }} group"
-  user:
+  ansible.builtin.user:
     name: "{{ (ansible_os_family == 'RedHat') | ternary('nginx', 'www-data') }}"
     groups: "{{ steamengine_app_user }}"
     append: true
