--- a/tasks/symfony/runtime.yml
+++ b/tasks/symfony/runtime.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: "Add nginx user in {{ steamengine_app_user }} group"
-  user:
+  ansible.builtin.user:
     name: "www-data"
     groups: "{{ steamengine_app_user }}"
     append: true
@@ -10,7 +10,7 @@
     - steamengine_runtime_sf
 
 - name: "Add nginx user in {{ steamengine_app_user }} group"
-  user:
+  ansible.builtin.user:
     name: "{{ item }}"
     groups: "{{ steamengine_app_user }}"
     append: true
