--- a/tasks/tomcat/asserts.yml
+++ b/tasks/tomcat/asserts.yml
@@ -1,20 +1,20 @@
 ---
 
 - name: Verify build extension
-  assert:
+  ansible.builtin.assert:
     that: (steamengine_build_url | basename | splitext)[1] == ".war"
   when: steamengine_build_url is defined and steamengine_build_url
   tags:
     - steamengine_deploy_tomcat
 
 - name: Verify conf sources
-  assert:
+  ansible.builtin.assert:
     that: steamengine_project_configuration_template_path is undefined or steamengine_project_configuration is undefined
   tags:
     - steamengine_deploy_tomcat
 
 - name: Verify tomcat version
-  assert:
+  ansible.builtin.assert:
     that: steamengine_tomcat_major_version == "7" or steamengine_tomcat_major_version == "9"
   tags:
     - steamengine_deploy_tomcat
