--- a/tasks/tomcat/runtime.yml
+++ b/tasks/tomcat/runtime.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Create systemd unit file
-  template:
+  ansible.builtin.template:
     src: systemd_tomcat.service.j2
     dest: "/etc/systemd/system/{{ steamengine_project_name }}.service"
     owner: root
@@ -13,7 +13,7 @@
     - steamengine_runtime_tomcat
 
 - name: "Add nginx user in {{ steamengine_app_user }} group"
-  user:
+  ansible.builtin.user:
     name: "{{ (ansible_os_family == 'RedHat') | ternary('nginx', 'www-data') }}"
     groups: "{{ steamengine_app_user }}"
     append: true
@@ -21,7 +21,7 @@
     - steamengine_runtime_tomcat
 
 - name: "Ensure {{ steamengine_project_name }} is running and set to start on boot"
-  systemd:
+  ansible.builtin.systemd:
     enabled: true
     daemon_reload: true
     name: "{{ steamengine_project_name }}"
